--- a/frontend/uomo-html.flexkitux.com/Demo1/index.html
+++ b/frontend/uomo-html.flexkitux.com/Demo1/index.html
@@ -259,62 +259,76 @@
     }
 
     /* Search and Filter Styles */
-    .header__search {
-      flex: 1;
-      max-width: 500px;
-      margin: 0 20px;
-    }
+    /* Container for the search filter section */
+.search-filter-section {
+    display: flex;
+    align-items: stretch; /* Stretch items to the same height */
+    background-color: #f7f7f8; /* Light background color */
+    padding: 10px 20px; /* Padding around the container */
+    border-radius: 5px; /* Rounded corners */
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); /* Slight shadow */
+}
 
-    .search-form {
-      position: relative;
-      display: flex;
-    }
+/* Search box styling */
+.search-box {
+    flex: 1; /* Take up available space */
+    margin-right: 15px; /* Space between the search box and filters */
+}
 
-    .search-form__input {
-      width: 100%;
-      padding: 10px 15px;
-      border: 1px solid #ddd;
-      border-radius: 4px;
-      font-size: 14px;
-    }
+/* Search input styling */
+#searchInput {
+    width: 100%; /* Full width */
+    padding: 10px; /* Padding inside */
+    border: 1px solid #ccc; /* Border around the input */
+    border-radius: 5px; /* Rounded input corners */
+    font-size: 14px; /* Font size */
+}
 
-    .search-form__submit {
-      position: absolute;
-      right: 0;
-      top: 0;
-      height: 100%;
-      padding: 0 15px;
-      background: none;
-      border: none;
-      cursor: pointer;
-    }
+/* Search button styling */
+#searchButton {
+    padding: 10px; /* Button padding */
+    background-color: #007bff; /* Button background color */
+    color: white; /* Button text color */
+    border: none; /* Remove border */
+    border-radius: 5px; /* Rounded button corners */
+    cursor: pointer; /* Pointer on hover */
+    margin-left: 5px; /* Space after input */
+}
 
-    .filter-section {
-      display: flex;
-      gap: 20px;
-      margin: 20px 0;
-      padding: 15px;
-      background: #f8f9fa;
-      border-radius: 4px;
-    }
+/* Filter box styling */
+.filter-box {
+    display: flex; /* Align filter groups in a row */
+    align-items: stretch; /* Stretch items to the same height */
+    margin-left: 15px; /* Space between search box and filters */
+}
 
-    .filter-group {
-      display: flex;
-      align-items: center;
-      gap: 10px;
-    }
+/* Individual filter group styling */
+.filter-group {
+    margin-right: 20px; /* Space between filter groups */
+    height: 46px;
+    display: flex; /* Align label and select in a row */
+    align-items: center; /* Center items vertically */
+}
 
-    .filter-group label {
-      font-weight: 500;
-    }
+/* Label styling */
+.filter-group label {
+    margin-right: 5px; /* Space between label and select */
+    font-weight: bold; /* Bold labels */
+}
 
-    .filter-group select {
-      padding: 8px 12px;
-      border: 1px solid #ddd;
-      border-radius: 4px;
-      background: white;
-      cursor: pointer;
-    }
+/* Select input styling */
+.filter-group select {
+    padding: 8px; /* Padding inside select */
+    border: 1px solid #ccc; /* Border around select */
+    border-radius: 5px; /* Rounded corners */
+    font-size: 14px; /* Font size */
+    height: 40px; /* Ensure consistent height */
+}
+
+/* Ensures a consistent spacing */
+.filter-group:last-child {
+    margin-right: 0; /* No margin for the last group */
+}
 
     .product-grid {
       display: grid;
@@ -346,7 +360,6 @@
 
     .search-box {
       display: flex;
-      margin-bottom: 20px;
       position: relative;
     }
 
@@ -1079,9 +1092,7 @@
       <div class="search-filter-section">
         <div class="search-box">
           <input type="text" id="searchInput" placeholder="Tìm kiếm sản phẩm..." />
-          <button id="searchButton">
-            <i class="icon-search"></i>
-          </button>
+         
         </div>
         <div class="filter-box">
           <div class="filter-group">
