update hiển thị lịch sử thanh toán

--- a/frontend/uomo-html.flexkitux.com/Demo1/store_location.html
+++ b/frontend/uomo-html.flexkitux.com/Demo1/store_location.html
@@ -2473,7 +2473,15 @@
     <script src="js/googlemap-setting.js"></script>
 
     <!-- Footer Scripts -->
-    <script src="js/theme.js"></script>
+    
+  
+  <script src="js/cart.js"></script>
+  <script src="js/product.js"></script>
+  <script src="js/cart-drawer.js"></script>
+  <script src="js/theme.js"></script>
+  
+  
+  
   </body>
 
   <!-- Mirrored from uomo-html.flexkitux.com/Demo1/store_location.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 03 Mar 2025 14:39:04 GMT -->
