--- a/frontend/uomo-html.flexkitux.com/Demo1/account_orders.html
+++ b/frontend/uomo-html.flexkitux.com/Demo1/account_orders.html
@@ -2953,7 +2953,15 @@
     <script src="js/plugins/jquery.fancybox.js"></script>
 
     <!-- Footer Scripts -->
-    <script src="js/theme.js"></script>
+    
+  
+  <script src="js/cart.js"></script>
+  <script src="js/product.js"></script>
+  <script src="js/cart-drawer.js"></script>
+  <script src="js/theme.js"></script>
+  
+  
+  
   </body>
 
   <!-- Mirrored from uomo-html.flexkitux.com/Demo1/account_orders.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 03 Mar 2025 14:39:15 GMT -->
