--- a/frontend/uomo-html.flexkitux.com/Demo1/terms.html
+++ b/frontend/uomo-html.flexkitux.com/Demo1/terms.html
@@ -2436,7 +2436,15 @@
     <script src="js/plugins/jquery.fancybox.js"></script>
 
     <!-- Footer Scripts -->
-    <script src="js/theme.js"></script>
+    
+  
+  <script src="js/cart.js"></script>
+  <script src="js/product.js"></script>
+  <script src="js/cart-drawer.js"></script>
+  <script src="js/theme.js"></script>
+  
+  
+  
   </body>
 
   <!-- Mirrored from uomo-html.flexkitux.com/Demo1/terms.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 03 Mar 2025 14:39:09 GMT -->
