--- a/frontend/uomo-html.flexkitux.com/Demo1/product1_simple.html
+++ b/frontend/uomo-html.flexkitux.com/Demo1/product1_simple.html
@@ -23,11 +23,34 @@
   <link rel="stylesheet" href="css/remove-submenu.css" />
 
   <style>
-    /* Product Form Swatches */
-    .product-form__item {
+     /* Product Form Swatches */
+     .product-form__item {
       margin-bottom: 1.5rem;
     }
 
+    /* Fix for cart drawer */
+    .cart-drawer {
+      position: fixed;
+      top: 0;
+      right: -100%;
+      width: 100%;
+      max-width: 400px;
+      height: 100vh;
+      background: #fff;
+      z-index: 1200 !important; /* Higher than overlay */
+      transition: all 0.3s ease;
+      box-shadow: -2px 0 5px rgba(0, 0, 0, 0.1);
+    }
+
+    .cart-drawer.active {
+      right: 0;
+    }
+
+    .page-overlay {
+      z-index: 1099 !important; /* Lower than cart drawer */
+    }
+
+    /* Rest of existing styles */
     .swatch-color .swatch-label {
       width: 32px;
       height: 32px;
@@ -35,26 +58,6 @@
       display: block;
       cursor: pointer;
       border: 2px solid transparent;
-      transition: all 0.2s ease;
-    }
-
-    .swatch-color input:checked+.swatch-label {
-      border-color: #000;
-      transform: scale(1.1);
-    }
-
-    .swatch-size .size-label {
-      min-width: 40px;
-      height: 40px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      border: 1px solid #ddd;
-      background: #fff;
-      cursor: pointer;
-      padding: 0 12px;
-      font-size: 14px;
-      font-weight: 500;
       transition: all 0.2s ease;
     }
 
