Thêm lịch sử thanh toán

--- a/frontend/uomo-html.flexkitux.com/Demo1/payment-history.html
+++ b/frontend/uomo-html.flexkitux.com/Demo1/payment-history.html
@@ -282,7 +282,7 @@
                                 <a href="shop1.html" class="footer-menu__link">Cửa hàng</a>
                             </li>
                             <li class="footer-menu__item">
-                                <a href="shop_cart.html" class="footer-menu__link">Giỏ hàng</a>
+                                <a href="payment-history.html" class="footer-menu__link">Giỏ hàng</a>
                             </li>
                             <li class="footer-menu__item">
                                 <a href="shop_wishlist.html" class="footer-menu__link">Yêu thích</a>
@@ -401,12 +401,12 @@
     <script src="js/plugins/jquery.fancybox.js"></script>
 
     <!-- Footer Scripts -->
-    
-  
-  <script src="js/cart.js"></script>
-  <script src="js/product.js"></script>
-  <script src="js/cart-drawer.js"></script>
-  <script src="js/theme.js"></script>
+
+
+    <script src="js/cart.js"></script>
+    <script src="js/product.js"></script>
+    <script src="js/cart-drawer.js"></script>
+    <script src="js/theme.js"></script>
     <script>
         // Danh sách sản phẩm mẫu
         const products = [
@@ -449,8 +449,8 @@
         });
     </script>
 
-  
-  
-  </body>
+
+
+</body>
 
 </html>
