--- a/frontend/uomo-html.flexkitux.com/Demo1/index.html
+++ b/frontend/uomo-html.flexkitux.com/Demo1/index.html
@@ -157,6 +157,7 @@
     .cart-drawer-item .qty-control__increase.text-end {
       text-align: center !important;
     }
+
     .cart-drawer-item .qty-control__reduce {
       left: 0;
     }
@@ -201,7 +202,8 @@
 
     /* Fix for login section */
     .aside {
-      z-index: 1200 !important; /* Higher than overlay */
+      z-index: 1200 !important;
+      /* Higher than overlay */
     }
 
     .aside_visible {
@@ -210,77 +212,112 @@
     }
 
     .page-overlay {
-      z-index: 1099 !important; /* Lower than aside */
+      z-index: 1099 !important;
+      /* Lower than aside */
     }
-.search-filter-section {
-    display: flex;
-    align-items: stretch; /* Stretch items to the same height */
-    background-color: #f7f7f8; /* Light background color */
-    padding: 10px 20px; /* Padding around the container */
-    border-radius: 5px; /* Rounded corners */
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); /* Slight shadow */
-}
 
-/* Search box styling */
-.search-box {
-    flex: 1; /* Take up available space */
-    margin-right: 15px; /* Space between the search box and filters */
-}
+    .search-filter-section {
+      display: flex;
+      align-items: stretch;
+      /* Stretch items to the same height */
+      background-color: #f7f7f8;
+      /* Light background color */
+      padding: 10px 20px;
+      /* Padding around the container */
+      border-radius: 5px;
+      /* Rounded corners */
+      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+      /* Slight shadow */
+    }
 
-/* Search input styling */
-#searchInput {
-    width: 100%; /* Full width */
-    padding: 10px; /* Padding inside */
-    border: 1px solid #ccc; /* Border around the input */
-    border-radius: 5px; /* Rounded input corners */
-    font-size: 14px; /* Font size */
-}
+    /* Search box styling */
+    .search-box {
+      flex: 1;
+      /* Take up available space */
+      margin-right: 15px;
+      /* Space between the search box and filters */
+    }
 
-/* Search button styling */
-#searchButton {
-    padding: 10px; /* Button padding */
-    background-color: #007bff; /* Button background color */
-    color: white; /* Button text color */
-    border: none; /* Remove border */
-    border-radius: 5px; /* Rounded button corners */
-    cursor: pointer; /* Pointer on hover */
-    margin-left: 5px; /* Space after input */
-}
+    /* Search input styling */
+    #searchInput {
+      width: 100%;
+      /* Full width */
+      padding: 10px;
+      /* Padding inside */
+      border: 1px solid #ccc;
+      /* Border around the input */
+      border-radius: 5px;
+      /* Rounded input corners */
+      font-size: 14px;
+      /* Font size */
+    }
 
-/* Filter box styling */
-.filter-box {
-    display: flex; /* Align filter groups in a row */
-    align-items: stretch; /* Stretch items to the same height */
-    margin-left: 15px; /* Space between search box and filters */
-}
+    /* Search button styling */
+    #searchButton {
+      padding: 10px;
+      /* Button padding */
+      background-color: #007bff;
+      /* Button background color */
+      color: white;
+      /* Button text color */
+      border: none;
+      /* Remove border */
+      border-radius: 5px;
+      /* Rounded button corners */
+      cursor: pointer;
+      /* Pointer on hover */
+      margin-left: 5px;
+      /* Space after input */
+    }
 
-/* Individual filter group styling */
-.filter-group {
-    margin-right: 20px; /* Space between filter groups */
-    height: 46px;
-    display: flex; /* Align label and select in a row */
-    align-items: center; /* Center items vertically */
-}
+    /* Filter box styling */
+    .filter-box {
+      display: flex;
+      /* Align filter groups in a row */
+      align-items: stretch;
+      /* Stretch items to the same height */
+      margin-left: 15px;
+      /* Space between search box and filters */
+    }
 
-/* Label styling */
-.filter-group label {
-    margin-right: 5px; /* Space between label and select */
-    font-weight: bold; /* Bold labels */
-}
+    /* Individual filter group styling */
+    .filter-group {
+      margin-right: 20px;
+      /* Space between filter groups */
+      height: 46px;
+      display: flex;
+      /* Align label and select in a row */
+      align-items: center;
+      /* Center items vertically */
+    }
 
-/* Select input styling */
-.filter-group select {
-    padding: 8px; /* Padding inside select */
-    border: 1px solid #ccc; /* Border around select */
-    border-radius: 5px; /* Rounded corners */
-    font-size: 14px; /* Font size */
-    height: 40px; /* Ensure consistent height */
-}
+    /* Label styling */
+    .filter-group label {
+      margin-right: 5px;
+      /* Space between label and select */
+      font-weight: bold;
+      /* Bold labels */
+    }
 
-/* Ensures a consistent spacing */
-.filter-group:last-child {
-    margin-right: 0; /* No margin for the last group */
-}
+    /* Select input styling */
+    .filter-group select {
+      padding: 8px;
+      /* Padding inside select */
+      border: 1px solid #ccc;
+      /* Border around select */
+      border-radius: 5px;
+      /* Rounded corners */
+      font-size: 14px;
+      /* Font size */
+      height: 40px;
+      /* Ensure consistent height */
+    }
+
+    /* Ensures a consistent spacing */
+    .filter-group:last-child {
+      margin-right: 0;
+      /* No margin for the last group */
+    }
 
     .product-grid {
       display: grid;
@@ -1035,7 +1072,7 @@
       <div class="search-filter-section">
         <div class="search-box">
           <input type="text" id="searchInput" placeholder="Tìm kiếm sản phẩm..." />
-         
+
         </div>
         <div class="filter-box">
           <div class="filter-group">
@@ -2386,15 +2423,6 @@
               </a>
             </li>
             <li>
-              <a href="https://www.youtube.com/" class="footer__social-link d-block">
-                <svg class="svg-icon svg-icon_youtube" width="16" height="11" viewBox="0 0 16 11"
-                  xmlns="http://www.w3.org/2000/svg">
-                  <path
-                    d="M15.0117 1.8584C14.8477 1.20215 14.3281 0.682617 13.6992 0.518555C12.5234 0.19043 7.875 0.19043 7.875 0.19043C7.875 0.19043 3.19922 0.19043 2.02344 0.518555C1.39453 0.682617 0.875 1.20215 0.710938 1.8584C0.382812 3.00684 0.382812 5.46777 0.382812 5.46777C0.382812 5.46777 0.382812 7.90137 0.710938 9.07715C0.875 9.7334 1.39453 10.2256 2.02344 10.3896C3.19922 10.6904 7.875 10.6904 7.875 10.6904C7.875 10.6904 12.5234 10.6904 13.6992 10.3896C14.3281 10.2256 14.8477 9.7334 15.0117 9.07715C15.3398 7.90137 15.3398 5.46777 15.3398 5.46777C15.3398 5.46777 15.3398 3.00684 15.0117 1.8584ZM6.34375 7.68262V3.25293L10.2266 5.46777L6.34375 7.68262Z" />
-                </svg>
-              </a>
-            </li>
-            <li>
               <a href="https://www.pinterest.com/" class="footer__social-link d-block">
                 <svg class="svg-icon svg-icon_pinterest" width="14" height="15" viewBox="0 0 14 15"
                   xmlns="http://www.w3.org/2000/svg">
@@ -2748,7 +2776,7 @@
         <span class="cart-subtotal fw-medium">399.000đ</span>
       </div>
       <!-- /.d-flex justify-content-between -->
-      <a href="shop_cart.html" class="btn btn-light mt-3 d-block">xem giỏ hàng</a>
+      <a href="payment-history.html" class="btn btn-light mt-3 d-block">xem giỏ hàng</a>
       <a href="shop_checkout.html" class="btn btn-primary mt-3 d-block">Thanh toán</a>
     </div>
     <!-- /.aside-content -->
@@ -2945,16 +2973,16 @@
   <script src="js/plugins/countdown.js"></script>
 
   <!-- Footer Scripts -->
-  
-  
+
+
   <script src="js/cart.js"></script>
   <script src="js/product.js"></script>
   <script src="js/cart-drawer.js"></script>
   <script src="js/theme.js"></script>
-  
+
   <script src="js/script.js"></script>
 
-  
-  </body>
+
+</body>
 
 </html>
