Thêm chi tiết sản phẩm

--- a/frontend/uomo-html.flexkitux.com/Demo1/index.html
+++ b/frontend/uomo-html.flexkitux.com/Demo1/index.html
@@ -1181,10 +1181,10 @@
             <div class="col-6 col-md-4 col-lg-3">
               <div class="product-card mb-3 mb-md-4 mb-xxl-5">
                 <div class="pc__img-wrapper">
-                  <a href="product1_simple.html">
-                    <img loading="lazy" src="../images/products/product_2.jpg" width="330" height="400"
+                  <a href="product2_variable.html">
+                    <img loading="lazy" src="../images/products/ao-the-thao-tanktop.jpg" width="330" height="400"
                       alt="Cropped Faux leather Jacket" class="pc__img" />
-                    <img loading="lazy" src="../images/products/product_2-1.jpg" width="330" height="400"
+                    <img loading="lazy" src="../images/products/ao_tank_top_02.jpg" width="330" height="400"
                       alt="Cropped Faux leather Jacket" class="pc__img pc__img-second" />
                   </a>
                   <button
@@ -1197,7 +1197,7 @@
                 <div class="pc__info position-relative">
                   <p class="pc__category">Áo ba lỗ</p>
                   <h6 class="pc__title">
-                    <a href="product1_simple.html">Áo Tanktop ICONDENIM Orgnls Logo</a>
+                    <a href="product2_variable.html">Áo Tanktop ICONDENIM Orgnls Logo</a>
                   </h6>
                   <div class="product-card__price d-flex">
                     <span class="money price">99.000đ</span>
@@ -1216,10 +1216,10 @@
             <div class="col-6 col-md-4 col-lg-3">
               <div class="product-card mb-3 mb-md-4 mb-xxl-5">
                 <div class="pc__img-wrapper">
-                  <a href="product1_simple.html">
-                    <img loading="lazy" src="../images/products/product_3.jpg" width="330" height="400"
+                  <a href="ao_polo.procool.html">
+                    <img loading="lazy" src="../images/products/product_2.jpg" width="330" height="400"
                       alt="Cropped Faux leather Jacket" class="pc__img" />
-                    <img loading="lazy" src="../images/products/product_3-1.jpg" width="330" height="400"
+                    <img loading="lazy" src="../images/products/product_2-1.jpg" width="330" height="400"
                       alt="Cropped Faux leather Jacket" class="pc__img pc__img-second" />
                   </a>
                   <button
@@ -1232,7 +1232,7 @@
                 <div class="pc__info position-relative">
                   <p class="pc__category">Áo Polo</p>
                   <h6 class="pc__title">
-                    <a href="product1_simple.html">Áo Polo Nam Procool ICONDENIM Seam Sealing</a>
+                    <a href="ao_polo.procool.html">Áo Polo Nam Procool ICONDENIM Seam Sealing</a>
                   </h6>
                   <div class="product-card__price d-flex">
                     <span class="money price">389.000đ</span>
@@ -1251,7 +1251,7 @@
             <div class="col-6 col-md-4 col-lg-3">
               <div class="product-card mb-3 mb-md-4 mb-xxl-5">
                 <div class="pc__img-wrapper">
-                  <a href="product1_simple.html">
+                  <a href="product4.html">
                     <img loading="lazy" src="../images/products/product_4.jpg" width="330" height="400"
                       alt="Cropped Faux leather Jacket" class="pc__img" />
                     <img loading="lazy" src="../images/products/product_4-1.jpg" width="330" height="400"
@@ -1267,7 +1267,7 @@
                 <div class="pc__info position-relative">
                   <p class="pc__category">Áo Thun</p>
                   <h6 class="pc__title">
-                    <a href="product1_simple.html">Áo Thun Nam Procool ICONDENIM Seam Sealing
+                    <a href="product4.html">Áo Thun Nam Procool ICONDENIM Seam Sealing
                     </a>
                   </h6>
                   <div class="product-card__price d-flex">
@@ -1288,7 +1288,7 @@
             <div class="col-6 col-md-4 col-lg-3">
               <div class="product-card mb-3 mb-md-4 mb-xxl-5">
                 <div class="pc__img-wrapper">
-                  <a href="product1_simple.html">
+                  <a href="product5.html">
                     <img loading="lazy" src="../images/products/product_5.jpg" width="330" height="400"
                       alt="Cropped Faux leather Jacket" class="pc__img" />
                     <img loading="lazy" src="../images/products/product_5-1.jpg" width="330" height="400"
@@ -1304,7 +1304,7 @@
                 <div class="pc__info position-relative">
                   <p class="pc__category">Áo sơ mi</p>
                   <h6 class="pc__title">
-                    <a href="product1_simple.html">Áo Sơ Mi Nam Bamboo ICONDENIM Vertical Stripe
+                    <a href="product5.html">Áo Sơ Mi Nam Bamboo ICONDENIM Vertical Stripe
                     </a>
                   </h6>
                   <div class="product-card__price d-flex">
@@ -1324,7 +1324,7 @@
             <div class="col-6 col-md-4 col-lg-3">
               <div class="product-card mb-3 mb-md-4 mb-xxl-5">
                 <div class="pc__img-wrapper">
-                  <a href="product1_simple.html">
+                  <a href="product6.html">
                     <img loading="lazy" src="../images/products/product_6.jpg" width="330" height="400"
                       alt="Cropped Faux leather Jacket" class="pc__img" />
                     <img loading="lazy" src="../images/products/product_6-1.jpg" width="330" height="400"
@@ -1340,7 +1340,7 @@
                 <div class="pc__info position-relative">
                   <p class="pc__category">Áo Thun</p>
                   <h6 class="pc__title">
-                    <a href="product1_simple.html">Áo Thun Nam ICONDENIM MARVEL Captain Sentinel Of
+                    <a href="product6.html">Áo Thun Nam ICONDENIM MARVEL Captain Sentinel Of
                       Liberty</a>
                   </h6>
                   <div class="product-card__price d-flex">
@@ -2973,11 +2973,16 @@
   <script src="js/plugins/countdown.js"></script>
 
   <!-- Footer Scripts -->
+
+
   <script src="js/cart.js"></script>
   <script src="js/product.js"></script>
   <script src="js/cart-drawer.js"></script>
   <script src="js/theme.js"></script>
+
   <script src="js/script.js"></script>
 
+
 </body>
+
 </html>
