--- a/frontend/uomo-html.flexkitux.com/Demo1/payment-history.html
+++ b/frontend/uomo-html.flexkitux.com/Demo1/payment-history.html
@@ -116,9 +116,9 @@
         <header id="header" class="header header_sticky">
             <div class="container">
                 <div class="header-desk header-desk_type_1">
-                    <div class="logo">
+                    <div class="logo" style="height: 26px; width: 112px;">
                         <a href="index.html">
-                            <img src="../images/logo.png" alt="Uomo" class="logo__image d-block" />
+                            <img src="../images/logo5.png" alt="Moon" class="logo__image d-block" />
                         </a>
                     </div>
 
@@ -241,9 +241,9 @@
             <div class="footer-middle container">
                 <div class="row row-cols-lg-5 row-cols-2">
                     <div class="footer-column footer-store-info col-12 mb-4 mb-lg-0">
-                        <div class="logo">
+                        <div class="logo" style="width: 112px; height: 26px;">
                             <a href="index.html">
-                                <img src="../images/logo.png" alt="Uomo" class="logo__image d-block" />
+                                <img src="../images/logo5.png" alt="Moon" class="logo__image d-block" />
                             </a>
                         </div>
                         <p class="footer-address">
