--- a/frontend/uomo-html.flexkitux.com/Demo1/shop_order_tracking.html
+++ b/frontend/uomo-html.flexkitux.com/Demo1/shop_order_tracking.html
@@ -27,7 +27,6 @@
       <script src="http://css3-mediaqueries-js.googlecode.com/svn/trunk/css3-mediaqueries.js"></script>
     <![endif]-->
 
-<<<<<<< HEAD
     <!-- Document Title -->
     <title>Tracking Order | Uomo eCommerce HTML5 Template</title>
     <style>
@@ -173,9 +172,8 @@
   </head>
 =======
   <!-- Document Title -->
-  <title>Tracking Order | Uomo eCommerce HTML5 Template</title>
+  <title>Tracking Order </title>
 </head>
->>>>>>> fc3abccdacda3bf7ab9c82bfc4c9a71be903aa5a
 
 <body>
   <svg class="d-none">
@@ -410,9 +408,9 @@
         <span class="btn-close-lg position-absolute top-0 start-0 w-100"></span>
       </a>
 
-      <div class="logo">
+      <div class="logo" style="width: 112px; height: 26px;">
         <a href="index.html">
-          <img src="../images/logo.png" alt="Uomo" class="logo__image d-block" />
+          <img src="../images/logo5.png" alt="Moon" class="logo__image d-block" />
         </a>
       </div>
       <!-- /.logo -->
@@ -563,9 +561,9 @@
   <header id="header" class="header header_sticky">
     <div class="container">
       <div class="header-desk header-desk_type_1">
-        <div class="logo">
+        <div class="logo" style="width: 112px; height: 26px;">
           <a href="index.html">
-            <img src="../images/logo.png" alt="Uomo" class="logo__image d-block" />
+            <img src="../images/logo5.png" alt="Moon" class="logo__image d-block" />
           </a>
         </div>
         <!-- /.logo -->
